test/errors/arrays/new_bounds_rank_inference_error.hy
// `new int[rows, cols]` infers a rectangular array type, not a 1D array.
int main()
{
    int[] values = new int[1, 3]
    return 0
}
